Completed VSUpdate so that when used with nant (nant vsupdate) the .csproj files get updated.

--- a/AOT/Core/SharpOS.AOT.Core.csproj
+++ b/AOT/Core/SharpOS.AOT.Core.csproj
@@ -1,4 +1,4 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -82,170 +82,170 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="Attributes\ADCInterfaceAttribute.cs" />
-    <Compile Include="Attributes\ADCLayerAttribute.cs" />
-    <Compile Include="Attributes\ADCStubAttribute.cs" />
-    <Compile Include="Attributes\AllocArrayAttribute.cs" />
-    <Compile Include="Attributes\AllocAttribute.cs" />
-    <Compile Include="Attributes\AllocObjectAttribute.cs" />
-    <Compile Include="Attributes\AddressOfAttribute.cs" />
-    <Compile Include="Attributes\CastClassAttribute.cs" />
-    <Compile Include="Attributes\IsInstAttribute.cs" />
-    <Compile Include="Attributes\ThrowAttribute.cs" />
-    <Compile Include="Attributes\ExceptionHandlingClauseAttribute.cs" />
-    <Compile Include="Attributes\MethodBoundaryAttribute.cs" />
-    <Compile Include="Attributes\ITableAttribute.cs" />
-    <Compile Include="Attributes\NakedAttribute.cs" />
-    <Compile Include="Attributes\IncludeAttribute.cs" />
-    <Compile Include="Attributes\ObjectToPointerAttribute.cs" />
-    <Compile Include="Attributes\TypeInfoAttribute.cs" />
-    <Compile Include="Attributes\KernelMainAttribute.cs" />
-    <Compile Include="Attributes\LabelAddressAttribute.cs" />
-    <Compile Include="Attributes\LabelAttribute.cs" />
-    <Compile Include="Attributes\LabelledAllocAttribute.cs" />
-    <Compile Include="Attributes\PointerToObjectAttribute.cs" />
-    <Compile Include="Attributes\StringAttribute.cs" />
-    <Compile Include="Attributes\TargetNamespaceAttribute.cs" />
-    <Compile Include="Attributes\VTableAttribute.cs" />
-    <Compile Include="Attributes\OverflowAttribute.cs" />
-    <Compile Include="COFF.cs" />
-    <Compile Include="IR\Block.cs" />
-    <Compile Include="IR\Class.cs" />
-    <Compile Include="IR\Dump.cs" />
-    <Compile Include="IR\Engine.cs" />
-    <Compile Include="IR\EngineException.cs" />
-    <Compile Include="IR\EngineOptions.cs" />
-    <Compile Include="IR\ExceptionHandlingClause.cs" />
-    <Compile Include="IAssembly.cs" />
-    <Compile Include="IR\Instructions\Add.cs" />
-    <Compile Include="IR\Instructions\Branch.cs" />
-    <Compile Include="IR\Instructions\Castclass.cs" />
-    <Compile Include="IR\Instructions\ConditionCheck.cs" />
-    <Compile Include="IR\Instructions\Convert.cs" />
-    <Compile Include="IR\Instructions\And.cs" />
-    <Compile Include="IR\Instructions\CallInstruction.cs" />
-    <Compile Include="IR\Instructions\Call.cs" />
-    <Compile Include="IR\Instructions\Callvirt.cs" />
-    <Compile Include="IR\Instructions\Box.cs" />
-    <Compile Include="IR\Instructions\Isinst.cs" />
-    <Compile Include="IR\Instructions\Newarr.cs" />
-    <Compile Include="IR\Instructions\UnboxAny.cs" />
-    <Compile Include="IR\Instructions\Unbox.cs" />
-    <Compile Include="IR\Instructions\Initialize.cs" />
-    <Compile Include="IR\Instructions\PHI.cs" />
-    <Compile Include="IR\Instructions\Ldc.cs" />
-    <Compile Include="IR\Instructions\Initobj.cs" />
-    <Compile Include="IR\Instructions\Stobj.cs" />
-    <Compile Include="IR\Instructions\Ldobj.cs" />
-    <Compile Include="IR\Instructions\Newobj.cs" />
-    <Compile Include="IR\Instructions\Ldarga.cs" />
-    <Compile Include="IR\Instructions\Stsfld.cs" />
-    <Compile Include="IR\Instructions\Stfld.cs" />
-    <Compile Include="IR\Instructions\Ldsflda.cs" />
-    <Compile Include="IR\Instructions\Ldsfld.cs" />
-    <Compile Include="IR\Instructions\Ldflda.cs" />
-    <Compile Include="IR\Instructions\Ldfld.cs" />
-    <Compile Include="IR\Instructions\Ldftn.cs" />
-    <Compile Include="IR\Instructions\Ldtoken.cs" />
-    <Compile Include="IR\Instructions\SizeOf.cs" />
-    <Compile Include="IR\Instructions\Localloc.cs" />
-    <Compile Include="IR\Instructions\Stind.cs" />
-    <Compile Include="IR\Instructions\Ldind.cs" />
-    <Compile Include="IR\Instructions\Stelem.cs" />
-    <Compile Include="IR\Instructions\Ldelem.cs" />
-    <Compile Include="IR\Instructions\Starg.cs" />
-    <Compile Include="IR\Instructions\Ldarg.cs" />
-    <Compile Include="IR\Instructions\Ldloca.cs" />
-    <Compile Include="IR\Instructions\Stloc.cs" />
-    <Compile Include="IR\Instructions\Ldloc.cs" />
-    <Compile Include="IR\Instructions\Ldstr.cs" />
-    <Compile Include="IR\Instructions\Ldnull.cs" />
-    <Compile Include="IR\Instructions\Ldlen.cs" />
-    <Compile Include="IR\Instructions\Xor.cs" />
-    <Compile Include="IR\Instructions\Or.cs" />
-    <Compile Include="IR\Instructions\Not.cs" />
-    <Compile Include="IR\Instructions\Dup.cs" />
-    <Compile Include="IR\Instructions\Pop.cs" />
-    <Compile Include="IR\Instructions\Switch.cs" />
-    <Compile Include="IR\Instructions\Return.cs" />
-    <Compile Include="IR\Instructions\Throw.cs" />
-    <Compile Include="IR\Instructions\Endfilter.cs" />
-    <Compile Include="IR\Instructions\Endfinally.cs" />
-    <Compile Include="IR\Instructions\Leave.cs" />
-    <Compile Include="IR\Instructions\Jump.cs" />
-    <Compile Include="IR\Instructions\SimpleBranch.cs" />
-    <Compile Include="IR\Instructions\RelationalType.cs" />
-    <Compile Include="IR\Instructions\Shr.cs" />
-    <Compile Include="IR\Instructions\Shl.cs" />
-    <Compile Include="IR\Instructions\Neg.cs" />
-    <Compile Include="IR\Instructions\Rem.cs" />
-    <Compile Include="IR\Instructions\Div.cs" />
-    <Compile Include="IR\Instructions\Mul.cs" />
-    <Compile Include="IR\Instructions\Sub.cs" />
-    <Compile Include="IR\Instructions\Instruction.cs" />
-    <Compile Include="IR\Instructions\Break.cs" />
-    <Compile Include="IR\Operands\Constant.cs" />
-    <Compile Include="IR\Operands\Argument.cs" />
-    <Compile Include="IR\Operands\FieldOperand.cs" />
-    <Compile Include="IR\Operands\Field.cs" />
-    <Compile Include="IR\Operands\Local.cs" />
-    <Compile Include="IR\Operands\Register.cs" />
-    <Compile Include="IR\Operands\Identifier.cs" />
-    <Compile Include="IR\Operands\TokenConstant.cs" />
-    <Compile Include="IR\Operands\StringConstant.cs" />
-    <Compile Include="IR\Operands\DoubleConstant.cs" />
-    <Compile Include="IR\Operands\FloatConstant.cs" />
-    <Compile Include="IR\Operands\LongConstant.cs" />
-    <Compile Include="IR\Operands\InternalType.cs" />
-    <Compile Include="IR\Operands\IntConstant.cs" />
-    <Compile Include="IR\Operands\NullConstant.cs" />
-    <Compile Include="IR\Operands\Operand.cs" />
-    <Compile Include="X86\Metadata.cs" />
-    <Compile Include="IR\Method.cs" />
-    <Compile Include="Metadata\ModuleMetadata.cs" />
-    <Compile Include="X86\AddressOf.cs" />
-    <Compile Include="X86\AlignInstruction.cs" />
-    <Compile Include="X86\Asm.cs" />
-    <Compile Include="X86\Assembly.cs" />
-    <Compile Include="X86\AssemblyMethod.cs" />
-    <Compile Include="X86\Bits32Instruction.cs" />
-    <Compile Include="X86\ByteDataInstruction.cs" />
-    <Compile Include="X86\ByteMemory.cs" />
-    <Compile Include="X86\CommentInstruction.cs" />
-    <Compile Include="X86\CR.cs" />
-    <Compile Include="X86\CRType.cs" />
-    <Compile Include="X86\DataInstruction.cs" />
     <Compile Include="X86\DR.cs" />
-    <Compile Include="X86\DRType.cs" />
-    <Compile Include="X86\DWordDataInstruction.cs" />
-    <Compile Include="X86\DWordMemory.cs" />
-    <Compile Include="X86\Engine.cs" />
-    <Compile Include="X86\FP.cs" />
-    <Compile Include="X86\FPType.cs" />
-    <Compile Include="X86\Instruction.cs" />
-    <Compile Include="X86\Instructions.cs" />
     <Compile Include="X86\IR.cs" />
-    <Compile Include="X86\LabelInstruction.cs" />
-    <Compile Include="X86\Memory.cs" />
-    <Compile Include="X86\OffsetInstruction.cs" />
-    <Compile Include="X86\OrgInstruction.cs" />
-    <Compile Include="X86\QWordMemory.cs" />
-    <Compile Include="X86\R16.cs" />
-    <Compile Include="X86\R16Type.cs" />
-    <Compile Include="X86\R32.cs" />
-    <Compile Include="X86\R32Type.cs" />
-    <Compile Include="X86\R8.cs" />
-    <Compile Include="X86\R8Type.cs" />
-    <Compile Include="X86\Register.cs" />
-    <Compile Include="X86\Seg.cs" />
-    <Compile Include="X86\SegType.cs" />
-    <Compile Include="X86\TimesInstruction.cs" />
     <Compile Include="X86\TR.cs" />
+    <Compile Include="X86\R32.cs" />
+    <Compile Include="X86\FP.cs" />
+    <Compile Include="X86\TimesInstruction.cs" />
+    <Compile Include="X86\Instruction.cs" />
+    <Compile Include="X86\Asm.cs" />
+    <Compile Include="X86\CommentInstruction.cs" />
+    <Compile Include="X86\Register.cs" />
+    <Compile Include="X86\ByteMemory.cs" />
+    <Compile Include="X86\ByteDataInstruction.cs" />
+    <Compile Include="X86\Bits32Instruction.cs" />
+    <Compile Include="X86\Instructions.cs" />
+    <Compile Include="X86\CRType.cs" />
+    <Compile Include="X86\R16.cs" />
+    <Compile Include="X86\SegType.cs" />
+    <Compile Include="X86\DRType.cs" />
+    <Compile Include="X86\Seg.cs" />
+    <Compile Include="X86\R8.cs" />
+    <Compile Include="X86\FPType.cs" />
+    <Compile Include="X86\DataInstruction.cs" />
+    <Compile Include="X86\DWordMemory.cs" />
+    <Compile Include="X86\LabelInstruction.cs" />
+    <Compile Include="X86\R16Type.cs" />
+    <Compile Include="X86\OrgInstruction.cs" />
+    <Compile Include="X86\CR.cs" />
+    <Compile Include="X86\WordMemory.cs" />
+    <Compile Include="X86\OffsetInstruction.cs" />
+    <Compile Include="X86\R32Type.cs" />
+    <Compile Include="X86\R8Type.cs" />
+    <Compile Include="X86\Engine.cs" />
+    <Compile Include="X86\Metadata.cs" />
     <Compile Include="X86\TRType.cs" />
     <Compile Include="X86\TWordMemory.cs" />
     <Compile Include="X86\WordDataInstruction.cs" />
-    <Compile Include="X86\WordMemory.cs" />
+    <Compile Include="X86\AlignInstruction.cs" />
+    <Compile Include="X86\Memory.cs" />
+    <Compile Include="X86\DWordDataInstruction.cs" />
+    <Compile Include="X86\AddressOf.cs" />
+    <Compile Include="X86\QWordMemory.cs" />
+    <Compile Include="X86\Assembly.cs" />
+    <Compile Include="X86\AssemblyMethod.cs" />
+    <Compile Include="Attributes\AllocArrayAttribute.cs" />
+    <Compile Include="Attributes\TypeInfoAttribute.cs" />
+    <Compile Include="Attributes\TargetNamespaceAttribute.cs" />
+    <Compile Include="Attributes\StringAttribute.cs" />
+    <Compile Include="Attributes\PointerToObjectAttribute.cs" />
+    <Compile Include="Attributes\AddressOfAttribute.cs" />
+    <Compile Include="Attributes\VTableAttribute.cs" />
+    <Compile Include="Attributes\LabelAttribute.cs" />
+    <Compile Include="Attributes\AllocObjectAttribute.cs" />
+    <Compile Include="Attributes\IncludeAttribute.cs" />
+    <Compile Include="Attributes\NakedAttribute.cs" />
+    <Compile Include="Attributes\ITableAttribute.cs" />
+    <Compile Include="Attributes\MethodBoundaryAttribute.cs" />
+    <Compile Include="Attributes\ExceptionHandlingClauseAttribute.cs" />
+    <Compile Include="Attributes\ObjectToPointerAttribute.cs" />
+    <Compile Include="Attributes\ThrowAttribute.cs" />
+    <Compile Include="Attributes\CastClassAttribute.cs" />
+    <Compile Include="Attributes\IsInstAttribute.cs" />
+    <Compile Include="Attributes\OverflowAttribute.cs" />
+    <Compile Include="Attributes\ADCInterfaceAttribute.cs" />
+    <Compile Include="Attributes\AllocAttribute.cs" />
+    <Compile Include="Attributes\LabelledAllocAttribute.cs" />
+    <Compile Include="Attributes\ADCLayerAttribute.cs" />
+    <Compile Include="Attributes\ADCStubAttribute.cs" />
+    <Compile Include="Attributes\KernelMainAttribute.cs" />
+    <Compile Include="Attributes\LabelAddressAttribute.cs" />
+    <Compile Include="IR\Operands\Operand.cs" />
+    <Compile Include="IR\Operands\Constant.cs" />
+    <Compile Include="IR\Operands\IntConstant.cs" />
+    <Compile Include="IR\Operands\InternalType.cs" />
+    <Compile Include="IR\Operands\NullConstant.cs" />
+    <Compile Include="IR\Operands\LongConstant.cs" />
+    <Compile Include="IR\Operands\FloatConstant.cs" />
+    <Compile Include="IR\Operands\DoubleConstant.cs" />
+    <Compile Include="IR\Operands\StringConstant.cs" />
+    <Compile Include="IR\Operands\TokenConstant.cs" />
+    <Compile Include="IR\Operands\Identifier.cs" />
+    <Compile Include="IR\Operands\Register.cs" />
+    <Compile Include="IR\Operands\Local.cs" />
+    <Compile Include="IR\Operands\Argument.cs" />
+    <Compile Include="IR\Operands\Field.cs" />
+    <Compile Include="IR\Operands\FieldOperand.cs" />
+    <Compile Include="IR\Instructions\Castclass.cs" />
+    <Compile Include="IR\Instructions\Throw.cs" />
+    <Compile Include="IR\Instructions\Return.cs" />
+    <Compile Include="IR\Instructions\Switch.cs" />
+    <Compile Include="IR\Instructions\Pop.cs" />
+    <Compile Include="IR\Instructions\Dup.cs" />
+    <Compile Include="IR\Instructions\Ldarga.cs" />
+    <Compile Include="IR\Instructions\Instruction.cs" />
+    <Compile Include="IR\Instructions\Not.cs" />
+    <Compile Include="IR\Instructions\And.cs" />
+    <Compile Include="IR\Instructions\Or.cs" />
+    <Compile Include="IR\Instructions\Xor.cs" />
+    <Compile Include="IR\Instructions\Ldlen.cs" />
+    <Compile Include="IR\Instructions\Ldnull.cs" />
+    <Compile Include="IR\Instructions\Ldstr.cs" />
+    <Compile Include="IR\Instructions\Ldloc.cs" />
+    <Compile Include="IR\Instructions\Stloc.cs" />
+    <Compile Include="IR\Instructions\Ldloca.cs" />
+    <Compile Include="IR\Instructions\Ldarg.cs" />
+    <Compile Include="IR\Instructions\Starg.cs" />
+    <Compile Include="IR\Instructions\Add.cs" />
+    <Compile Include="IR\Instructions\Ldelem.cs" />
+    <Compile Include="IR\Instructions\Stelem.cs" />
+    <Compile Include="IR\Instructions\Ldind.cs" />
+    <Compile Include="IR\Instructions\Stind.cs" />
+    <Compile Include="IR\Instructions\Localloc.cs" />
+    <Compile Include="IR\Instructions\SizeOf.cs" />
+    <Compile Include="IR\Instructions\Ldtoken.cs" />
+    <Compile Include="IR\Instructions\Ldftn.cs" />
+    <Compile Include="IR\Instructions\Ldfld.cs" />
+    <Compile Include="IR\Instructions\Ldflda.cs" />
+    <Compile Include="IR\Instructions\Ldsfld.cs" />
+    <Compile Include="IR\Instructions\Ldsflda.cs" />
+    <Compile Include="IR\Instructions\Sub.cs" />
+    <Compile Include="IR\Instructions\Stfld.cs" />
+    <Compile Include="IR\Instructions\Stsfld.cs" />
+    <Compile Include="IR\Instructions\CallInstruction.cs" />
+    <Compile Include="IR\Instructions\Call.cs" />
+    <Compile Include="IR\Instructions\PHI.cs" />
+    <Compile Include="IR\Instructions\Callvirt.cs" />
+    <Compile Include="IR\Instructions\Newobj.cs" />
+    <Compile Include="IR\Instructions\Ldobj.cs" />
+    <Compile Include="IR\Instructions\Mul.cs" />
+    <Compile Include="IR\Instructions\Stobj.cs" />
+    <Compile Include="IR\Instructions\Initobj.cs" />
+    <Compile Include="IR\Instructions\Ldc.cs" />
+    <Compile Include="IR\Instructions\Initialize.cs" />
+    <Compile Include="IR\Instructions\Box.cs" />
+    <Compile Include="IR\Instructions\Unbox.cs" />
+    <Compile Include="IR\Instructions\UnboxAny.cs" />
+    <Compile Include="IR\Instructions\Newarr.cs" />
+    <Compile Include="IR\Instructions\Isinst.cs" />
+    <Compile Include="IR\Instructions\Break.cs" />
+    <Compile Include="IR\Instructions\Div.cs" />
+    <Compile Include="IR\Instructions\Rem.cs" />
+    <Compile Include="IR\Instructions\Neg.cs" />
+    <Compile Include="IR\Instructions\Shl.cs" />
+    <Compile Include="IR\Instructions\Shr.cs" />
+    <Compile Include="IR\Instructions\RelationalType.cs" />
+    <Compile Include="IR\Instructions\Branch.cs" />
+    <Compile Include="IR\Instructions\SimpleBranch.cs" />
+    <Compile Include="IR\Instructions\ConditionCheck.cs" />
+    <Compile Include="IR\Instructions\Convert.cs" />
+    <Compile Include="IR\Instructions\Jump.cs" />
+    <Compile Include="IR\Instructions\Leave.cs" />
+    <Compile Include="IR\Instructions\Endfinally.cs" />
+    <Compile Include="IR\Instructions\Endfilter.cs" />
+    <Compile Include="IR\Block.cs" />
+    <Compile Include="IR\Method.cs" />
+    <Compile Include="IR\ExceptionHandlingClause.cs" />
+    <Compile Include="IR\EngineOptions.cs" />
+    <Compile Include="IR\Dump.cs" />
+    <Compile Include="IR\EngineException.cs" />
+    <Compile Include="IR\Engine.cs" />
+    <Compile Include="IR\Class.cs" />
+    <Compile Include="Metadata\ModuleMetadata.cs" />
+    <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="COFF.cs" />
+    <Compile Include="IAssembly.cs" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
