--- a/Tools/DiskImageUpdater/DiskImageUpdater.csproj
+++ b/Tools/DiskImageUpdater/DiskImageUpdater.csproj
@@ -1,4 +1,4 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -57,7 +57,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="*.cs" />
+    <Compile Include="MsVhd.cs" />
+    <Compile Include="Ext2FS.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="GroupDescriptor.cs" />
+    <Compile Include="DirectoryFileFormat.cs" />
+    <Compile Include="INode.cs" />
+    <Compile Include="SuperBlock.cs" />
+    <Compile Include="Block.cs" />
+    <Compile Include="FileSystem.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
