--- a/AOT/Core.Tests/SharpOS.AOT.Tests.csproj
+++ b/AOT/Core.Tests/SharpOS.AOT.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -61,7 +61,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="*.cs" />
+    <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="X86.Memory32.cs" />
+    <Compile Include="X86.Memory16.cs" />
+    <Compile Include="X86.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\SharpOS.AOT.Core.csproj">
