More exception types, improved unhandled exception messages/stack traces, new and improved Time and Calendar code (uses objects/interfaces), Panic() now prints the error before dying instead of doing nothing.
2008-02-11  William Lahti  <xfurious@gmail.com>
        * Improved unhandled exception message to match .NET
        * Added a number of exception types like the ArgumentException family,
        NotSupportedException and NotImplementedException.
        * Foundation/Time.cs: Time is now a class
        * Foundation/ICalendar.cs: interface for calendars to support
        * Foundation/CalendarManager.cs: handles instantiating and mapping
          calendars.
        * Foundation/GregorianCalendar.cs: implements ICalendar
        * Clock.cs: uses the new Time and Calendar changes.
        * Diagnostics.cs: Panic now prints the error

--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -146,6 +146,8 @@
     <Compile Include="Foundation\Convert.cs" />
     <Compile Include="Foundation\GregorianCalendar.cs" />
     <Compile Include="Foundation\Testcase.cs" />
+    <Compile Include="Foundation\ICalendar.cs" />
+    <Compile Include="Foundation\CalendarManager.cs" />
     <Compile Include="FileSystem\GroupDescriptor.cs" />
     <Compile Include="FileSystem\DirectoryFileFormat.cs" />
     <Compile Include="FileSystem\INode.cs" />
@@ -199,6 +201,10 @@
     <Compile Include="Korlib\System\SystemException.cs" />
     <Compile Include="Korlib\System\OverflowException.cs" />
     <Compile Include="Korlib\System\ArithmeticException.cs" />
+    <Compile Include="Korlib\System\ArgumentException.cs" />
+    <Compile Include="Korlib\System\ArgumentNullException.cs" />
+    <Compile Include="Korlib\System\NotSupportedException.cs" />
+    <Compile Include="Korlib\System\NotImplementedException.cs" />
     <Compile Include="Korlib\System\ValueType.cs" />
     <Compile Include="Korlib\System\Enum.cs" />
     <Compile Include="Korlib\System\UInt64.cs" />
