--- a/Kernel/Tests/CS/SharpOS.Kernel.Tests.CS.csproj
+++ b/Kernel/Tests/CS/SharpOS.Kernel.Tests.CS.csproj
@@ -1,4 +1,4 @@
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
+﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Generics.cs" />
     <Compile Include="Exceptions.cs" />
     <Compile Include="Abstract.cs" />
     <Compile Include="Misc.cs" />
