--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1BDA3EE0-BC5F-4C4A-986C-31730A8EFADC}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -78,6 +78,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ADC\MemoryBlock.cs" />
+    <Compile Include="ADC\X86\IOStream8bit.cs" />
+    <Compile Include="ADC\X86\GenericDriver.cs" />
+    <Compile Include="ADC\X86\IOStream.cs" />
+    <Compile Include="ADC\X86\KeyboardDriver.cs" />
+    <Compile Include="ADC\X86\RTCDriver.cs" />
     <Compile Include="ADC\X86\Scheduler.cs" />
     <Compile Include="ADC\X86\IO.cs" />
     <Compile Include="ADC\X86\PCIBusDriver.cs" />
@@ -128,7 +134,6 @@
     <Compile Include="ADC\IDeviceManager.cs" />
     <Compile Include="ADC\IDriver.cs" />
     <Compile Include="ADC\IDevice.cs" />
-    <Compile Include="ADC\MemoryMap.cs" />
     <Compile Include="ADC\IHardwareResourceManager.cs" />
     <Compile Include="ADC\Scheduler.cs" />
     <Compile Include="ADC\TextMode.cs" />
@@ -243,6 +248,12 @@
     <EmbeddedResource Include="..\..\build\Temp\BuiltinKeymaps.ska">
       <LogicalName>BuiltinKeyMaps.ska</LogicalName>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Documents\ADC.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Config\BuiltinKeyMaps.cfg" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
